--- a/index.css
+++ b/index.css
@@ -30,15 +30,15 @@
 	letter-spacing: 1px;
 }
 
-.btn-outline-light:hover{
-	background-color: rgba(255,255,255,0.15);
-}
-
 h1 {
    color: white;  /* Fallback: assume this color ON TOP of image */
-   background: url(https://images.unsplash.com/photo-1545231097-cbd796f1d95f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=795&q=80) repeat;
+   background: url(https://2840374.fs1.hubspotusercontent-na1.net/hubfs/2840374/Neighbourhood%20Images%202021/culture-animation_best-q-large-size_v2.webp) no-repeat;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
+}
+
+.btn-outline-light:hover{
+	background-color: rgba(255,255,255,0.15);
 }
 
 .footer{
@@ -74,7 +74,7 @@ h1 {
 	background-image: url("https://images.unsplash.com/photo-1524439188326-e47322d1cef2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
 
 	/* Set a specific height */
-	min-height: 700px;
+	min-height: 500px;
 
 	/* Create the parallax scrolling effect */
 	background-attachment: fixed;
